remove deleteBanRecord API & fix banUser
